# cpx_barometer

./: Clinopyroxene_P-T_2020 v3.xlsx  Jorgenson_cpx_dat_MAL_PT_filtered.numbers  Oxide_Molar_Masses.csv  Oxide_Molar_Masses.numbers  hello.py  linear_tree_fit_Barometer.py  linear_tree_fit_Thermometer.py  pyproject.toml
